fix: ensure vertical alignment and text alignment for table cells in general.scss, and add newline at end of styles.min.css for consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1045,6 +1045,8 @@ body.logged-in {
 
 		td, th {
 			border: 1px solid $medium-gray-color;
+			vertical-align: middle;
+			text-align: center;
 		}
 	}
 }
